--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </div>
     </div>
 
-    <script src="static/jquery.slim.min.js"></script>
+    <script src="static/jquery.min.js"></script>
     <script src="static/popper.min.js"></script>
     <script src="static/bootstrap.min.js"></script>
     <script src="static/feather.min.js"></script>
