--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
     </div>
 
     <script src="static/jquery.min.js"></script>
-    <script src="static/popper.min.js"></script>
-    <script src="static/bootstrap.min.js"></script>
+    <script src="static/bootstrap.bundle.min.js"></script>
     <script src="static/feather.min.js"></script>
     <script src="static/dashboard.js"></script>
     <script src="static/main.js"></script>
