Modified index page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, minimum-scale=1, maximum-scale=1, shrink-to-fit=no">
     <meta name="description" content="Python Level 2 Project">
     <meta name="author" content="Master Bug">
-    <title>理財小幫手</title>
+    <title>台股入門</title>
     <link rel="icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="stylesheet" href="static/bootstrap.min.css">
@@ -15,7 +15,7 @@
   </head>
   <body>
     <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-      <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="#">理財小幫手</a>
+      <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="#">台股入門</a>
       <button class="navbar-toggler position-absolute d-md-none collapsed" type="button"
         data-toggle="collapse" data-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
